--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.25",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
