saving progress, still having issues with axios posting, going to attempt to backtrack the package-lock to backendscaffolding branch

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eject": "react-scripts eject",
     "server": "nodemon ./server/bin/www"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
