--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.25",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
