--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
